# user_links_api/apps/collections/models/__init__.py
@@ -1,0 +1,6 @@
+from .collection import CollectionModel
+
+
+__all__ = (
+    'CollectionModel',
+)
